# server/app/main.py
@@ -5,6 +5,7 @@ from fastapi.openapi.utils import get_openapi
 from prometheus_fastapi_instrumentator import Instrumentator
 
 from . import example, items
+from .rest_api.routes import health_check
 
 
 class CustomFastAPI(FastAPI):
@@ -35,6 +36,6 @@ app = CustomFastAPI()
 
 Instrumentator().instrument(app).expose(app)
 
-
+app.include_router(health_check.routes.router)
 app.include_router(example.router)
 app.include_router(items.routes.router)
